chore(*): atualização nos dados e index
Inclusão de dados, ajustes no header e testes na parte de coleções da página.

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/*.start{
+    height: 100vh;
+}*/
 .container{
     margin-top: 1rem;
+}
+.row{
+    padding: 0px 7.813rem;
 }
